<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/smoke"
    tools:context=".SignUpFragment">

    <TextView
        android:id="@+id/text_1"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="Sign up with one of the following options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google_button"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        android:layout_height="wrap_content"
        android:text="@string/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/apple_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apple"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_1" />

    <View
        style="@style/Divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/view"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@id/google_button" />

    <TextView
        android:id="@+id/name_text"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:hint="@string/hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/email_text"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:hint="*******@example.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_text"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="*******" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_button"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout3" />

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/already_have_an_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button" />

    <TextView
        android:id="@+id/log_in"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toEndOf="@id/question_text"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button"
        tools:layout_editor_absoluteX="347dp" />


</androidx.constraintlayout.widget.ConstraintLayout>